--- a/index.html
+++ b/index.html
@@ -214,49 +214,39 @@
       to { width: 30ch }
     }
 
-    /* Mobile Responsiveness */
     @media (max-width: 768px) {
       header h1 {
         font-size: 2rem;
       }
-
       header p {
         font-size: 1.2rem;
         padding: 0 10px;
       }
-
       .feature {
         width: calc(50% - 20px);
         margin: 10px;
       }
-
       .mission-section {
         flex-direction: column;
         padding: 30px 15px;
       }
-
       .mission-text {
         text-align: center;
       }
-
       .cta a {
         font-size: 1rem;
         padding: 12px 24px;
       }
-
       .logo-flip {
         width: 160px;
       }
-
       .feature img {
         width: 42px;
         height: 42px;
       }
-
       .feature h3 {
         font-size: 0.95rem;
       }
-
       .feature p {
         font-size: 0.85rem;
       }
@@ -271,39 +261,39 @@
 </head>
 <body>
   <header>
-    <img src="skillio logo.png" alt="Skillio Logo" class="logo-flip" />
+    <img src="skillio/skillio logo.png" alt="Skillio Logo" class="logo-flip" />
     <p><span class="slogan type">Give a skill Gain a skill</span> <span class="grow">Grow together!</span></p>
   </header>
 
   <section class="features">
     <div class="feature">
-      <img src="skill_icon_1.png" alt="Time Wallet Icon" />
+      <img src="skillio/skill_icon_1.png" alt="Time Wallet Icon" />
       <h3>Time Wallet</h3>
       <p>Earn time credits by helping others. Spend them on skills you need.</p>
     </div>
     <div class="feature">
-      <img src="skill_icon_3.png" alt="Smart Matching Icon" />
+      <img src="skillio/skill_icon_3.png" alt="Smart Matching Icon" />
       <h3>Smart Matching</h3>
       <p>We connect you with people who have the skills you're looking for.</p>
     </div>
     <div class="feature">
-      <img src="skill_icon_2.png" alt="Skill Profiles Icon" />
+      <img src="skillio/skill_icon_2.png" alt="Skill Profiles Icon" />
       <h3>Skill Profiles</h3>
       <p>Showcase your talents with ratings, bios, and past contributions.</p>
     </div>
     <div class="feature">
-      <img src="skill_icon_4.png" alt="Community Icon" />
+      <img src="skillio/skill_icon_4.png" alt="Community Icon" />
       <h3>Community</h3>
       <p>Join a growing network of learners, helpers, and creators.</p>
     </div>
   </section>
 
   <div class="cta">
-    <a href="main.html">Start Swapping Skills</a>
+    <a href="skillio/main.html">Start Swapping Skills</a>
   </div>
 
   <section class="mission-section">
-    <img src="mission-image.jpg" alt="Mission Visual">
+    <img src="skillio/mission-image.jpg" alt="Mission Visual">
     <div class="mission-text">
       <h2>Our Mission</h2>
       <p>Skillio exists to create a fair, inclusive economy where everyone’s time and talents are valued. Whether you’re teaching guitar or learning to cook, our goal is to connect you with people in a vibrant, skill-sharing community that thrives on giving and gaining, not spending.</p>
@@ -315,9 +305,9 @@
     <div class="social-block">
       <h3>Follow the Skillio Socials!</h3>
       <div class="social-icons">
-        <a href="https://instagram.com" target="_blank"><img src="instagram.png" alt="Instagram"></a>
-        <a href="https://facebook.com" target="_blank"><img src="facebook.png" alt="Facebook"></a>
-        <a href="https://tiktok.com" target="_blank"><img src="tiktok.png" alt="TikTok"></a>
+        <a href="https://instagram.com" target="_blank"><img src="skillio/instagram.png" alt="Instagram"></a>
+        <a href="https://facebook.com" target="_blank"><img src="skillio/facebook.png" alt="Facebook"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="skillio/tiktok.png" alt="TikTok"></a>
       </div>
     </div>
   </footer>
