--- a/skillio/main.html
+++ b/skillio/main.html
@@ -21,25 +21,25 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       background-color: #c9f2f5;
-      padding: 20px;
+      padding: 40px;
       color: #0f2027;
     }
 
     .logo-flip {
       animation: flipLogo 1.5s infinite ease-in-out;
       position: absolute;
-      top: 10px;
-      left: 10px;
-      height: 80px;
+      top: 20px;
+      left: 20px;
+      height: 100px;
     }
 
     .nav-buttons {
       position: absolute;
-      top: 10px;
-      right: 10px;
+      top: 20px;
+      right: 20px;
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 10px;
       z-index: 10;
     }
 
@@ -47,54 +47,53 @@
     .nav-buttons button.logout-btn {
       background-color: #00bcd4;
       color: white;
-      padding: 8px 16px;
+      padding: 10px 20px;
       border: none;
       border-radius: 20px;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       cursor: pointer;
     }
 
     .nav-buttons a button:hover,
     .nav-buttons button.logout-btn:hover {
       background-color: #0097a7;
-      transform: scale(1.05);
-      box-shadow: 0 0 10px rgba(0, 188, 212, 0.5);
+      transform: scale(1.1);
+      box-shadow: 0 0 12px rgba(0, 188, 212, 0.6);
     }
 
     h1 {
       text-align: center;
       color: #00bcd4;
-      font-size: 2rem;
-      margin-top: 120px;
+      font-size: 2.5rem;
+      margin-top: 140px;
     }
 
     .business-note {
       text-align:center;
-      margin: 20px auto;
+      margin: 30px auto;
       background:#00bcd4;
       color:white;
-      padding: 12px;
-      border-radius: 10px;
-      max-width: 90%;
+      padding: 16px;
+      border-radius: 12px;
+      max-width: 600px;
     }
 
     #searchBar {
       display: block;
       margin: 20px auto;
-      padding: 10px;
-      font-size: 1rem;
-      width: 90%;
-      max-width: 500px;
-      border-radius: 8px;
+      padding: 10px 20px;
+      font-size: 1.2rem;
+      width: 60%;
+      border-radius: 10px;
       border: none;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
 
     #results {
       max-width: 800px;
       margin: 0 auto;
       background: white;
-      padding: 16px;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
@@ -123,9 +122,9 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 15px;
-      margin: 20px auto;
-      max-width: 1000px;
+      gap: 20px;
+      margin: 30px auto;
+      max-width: 800px;
     }
 
     .category {
@@ -137,8 +136,8 @@
       border-radius: 12px;
       color: white;
       cursor: pointer;
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 200px;
       text-align: center;
       font-weight: bold;
       transition: transform 0.2s;
@@ -152,14 +151,21 @@
       background: #00bcd4;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
+      body {
+        padding: 20px;
+      }
+
+      .logo-flip {
+        height: 80px;
+      }
+
       .nav-buttons {
-        top: 90px;
-        left: 10px;
-        right: auto;
+        top: 100px;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        gap: 8px;
       }
 
       .nav-buttons a button,
@@ -169,20 +175,25 @@
         margin: 2px;
       }
 
-      .category {
-        width: 45%;
-        height: 120px;
+      h1 {
+        font-size: 2rem;
+        margin-top: 180px;
       }
 
-      h1 {
-        font-size: 1.6rem;
-        margin-top: 160px;
+      #searchBar {
+        width: 90%;
+        font-size: 1rem;
+      }
+
+      .category {
+        width: 45%;
+        height: 150px;
       }
     }
   </style>
 </head>
 <body>
-  <a href="skill%20swap%20landing.html">
+  <a href="index.html">
     <img src="skillio logo.png" alt="Skillio Logo" class="logo-flip" />
   </a>
 
@@ -318,7 +329,6 @@
   </script>
 </body>
 </html>
-
 
 
 
