--- a/skillio/main.html
+++ b/skillio/main.html
@@ -193,7 +193,7 @@
   </style>
 </head>
 <body>
-  <a href="index.html">
+  <a href="../index.html">
     <img src="skillio logo.png" alt="Skillio Logo" class="logo-flip" />
   </a>
 
