--- a/skillio/dashboard.html
+++ b/skillio/dashboard.html
@@ -6,6 +6,7 @@
   <title>Skillio Dashboard</title>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
   <style>
     body {
       margin: 0;
@@ -14,13 +15,11 @@
       color: #0f2027;
       padding: 30px;
     }
-
     @keyframes flipLogo {
       0% { transform: rotateY(0deg); }
       50% { transform: rotateY(180deg); }
       100% { transform: rotateY(360deg); }
     }
-
     .top-nav {
       background-color: #00bcd4;
       padding: 8px 20px;
@@ -33,19 +32,16 @@
       gap: 10px;
       box-shadow: 0 4px 12px rgba(0, 188, 212, 0.3);
     }
-
     .top-nav img {
       height: 120px;
       animation: flipLogo 2s infinite ease-in-out;
     }
-
     .top-nav-links {
       display: flex;
       gap: 20px;
       flex-wrap: wrap;
       justify-content: center;
     }
-
     .top-nav a {
       color: white;
       text-decoration: none;
@@ -53,11 +49,9 @@
       font-size: 1rem;
       transition: color 0.2s;
     }
-
     .top-nav a:hover {
       color: #e0f7fa;
     }
-
     .level-display {
       background-color: white;
       color: #00bcd4;
@@ -67,13 +61,11 @@
       border-radius: 20px;
       box-shadow: 0 4px 10px rgba(0, 188, 212, 0.2);
     }
-
     h1 {
       text-align: center;
       color: #00bcd4;
       margin-bottom: 30px;
     }
-
     .dashboard-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -81,7 +73,6 @@
       max-width: 1200px;
       margin: 0 auto;
     }
-
     .card {
       background: white;
       border-radius: 16px;
@@ -89,82 +80,49 @@
       box-shadow: 0 8px 20px rgba(0, 188, 212, 0.2);
       transition: transform 0.2s;
     }
-
     .card:hover {
       transform: translateY(-5px);
     }
-
     .card h2 {
       margin-top: 0;
       color: #007e8a;
     }
-
     .value {
       font-size: 2rem;
       font-weight: bold;
       margin-top: 10px;
     }
-
     #badgeList li {
       font-size: 1.1rem;
       padding: 4px 0;
       display: flex;
       align-items: center;
     }
-
     .badge-image {
       width: 60px;
       height: 60px;
-      vertical-align: middle;
       border-radius: 12px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.15);
       transition: transform 0.2s;
     }
-
     .badge-image:hover {
       transform: scale(1.1);
     }
-
     @media (max-width: 600px) {
-      body {
-        padding: 20px;
-      }
-
       .top-nav {
         flex-direction: column;
         align-items: center;
         text-align: center;
       }
-
       .top-nav img {
         height: 90px;
       }
-
       .top-nav-links {
         flex-direction: column;
         gap: 10px;
       }
-
-      .top-nav a {
-        font-size: 0.95rem;
-      }
-
-      .level-display {
-        font-size: 0.9rem;
-        padding: 6px 12px;
-      }
-
-      h1 {
-        font-size: 1.6rem;
-      }
-
-      .value {
-        font-size: 1.5rem;
-      }
-
-      .badge-image {
-        width: 50px;
-        height: 50px;
+      .dashboard-container {
+        grid-template-columns: 1fr;
       }
     }
   </style>
@@ -173,15 +131,13 @@
 
 <!-- Navigation Bar -->
 <nav class="top-nav">
-  <div class="level-display" id="accountLevel">Level: 0</div>
-  <a href="main.html">
-    <img src="skillio logo.png" alt="Skillio Logo" />
-  </a>
+  <div class="level-display" id="accountLevel">Level: Loading...</div>
+  <a href="main.html"><img src="skillio logo.png" alt="Skillio Logo" /></a>
   <div class="top-nav-links">
     <a href="profile.html">Profile</a>
     <a href="messages.html">Messages</a>
     <a href="store.html">Store</a>
-    <a href="#">Logout</a>
+    <a href="#" onclick="firebase.auth().signOut().then(() => window.location.href='auth.html')">Logout</a>
   </div>
 </nav>
 
@@ -199,17 +155,12 @@
   <div class="card">
     <h2>Suggested Matches</h2>
     <ul id="suggestedMatches">
-      <li>Loading matches...</li>
+      <li>Coming soon...</li>
     </ul>
   </div>
   <div class="card">
     <h2>Your Badges</h2>
     <ul id="badgeList">Loading badges...</ul>
-  </div>
-  <div class="card">
-    <h2>Simulate Swap</h2>
-    <button onclick="completeSkillSwap()">Complete Swap</button>
-    <p id="swapCountDisplay"></p>
   </div>
 </div>
 
@@ -221,21 +172,27 @@
     projectId: "skillio-b2f44",
     storageBucket: "skillio-b2f44.appspot.com",
     messagingSenderId: "883002535621",
-    appId: "1:883002535621:web:f3efb6d41389fbd91c8aac",
-    measurementId: "G-49YPEVEDNJ"
+    appId: "1:883002535621:web:f3efb6d41389fbd91c8aac"
   };
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
+  const auth = firebase.auth();
 
-  const userId = 'user 1';
+  auth.onAuthStateChanged(user => {
+    if (!user) {
+      window.location.href = 'auth.html';
+      return;
+    }
 
-  db.collection('users').doc(userId).get().then(doc => {
-    if (doc.exists) {
+    const userId = user.uid;
+    db.collection('users').doc(userId).get().then(doc => {
+      if (!doc.exists) return;
+
       const data = doc.data();
-      document.getElementById('swapsCompleted').textContent = data.swapsCompleted;
-      document.getElementById('appointments').textContent = data.appointments;
-      document.getElementById('accountLevel').textContent = 'Level: ' + data.level;
+      document.getElementById('swapsCompleted').textContent = data.swapsCompleted ?? 0;
+      document.getElementById('appointments').textContent = data.appointments ?? 0;
+      document.getElementById('accountLevel').textContent = 'Level: ' + (data.level ?? 0);
 
       const badgeList = document.getElementById('badgeList');
       badgeList.innerHTML = '';
@@ -254,34 +211,14 @@
       if (badges.length === 0) {
         badgeList.innerHTML = '<li>No badges earned yet.</li>';
       } else {
-        badges.forEach(badge => {
+        for (const badge of badges) {
           const li = document.createElement('li');
-          const img = document.createElement('img');
-          const span = document.createElement('span');
-
-          img.src = badge.img;
-          img.alt = badge.alt;
-          img.className = 'badge-image';
-
-          span.textContent = ' ' + badge.name;
-          span.style.marginLeft = "10px";
-
-          li.appendChild(img);
-          li.appendChild(span);
+          li.innerHTML = `<img src="${badge.img}" alt="${badge.alt}" class="badge-image"><span style="margin-left: 10px;">${badge.name}</span>`;
           badgeList.appendChild(li);
-        });
+        }
       }
-    } else {
-      console.log("No such document!");
-    }
-  }).catch(error => {
-    console.log("Error getting document:", error);
+    });
   });
-
-  function completeSkillSwap() {
-    const count = Math.floor(Math.random() * 100);
-    document.getElementById('swapCountDisplay').textContent = `You've completed ${count} swaps (simulated).`;
-  }
 </script>
 </body>
 </html>
